# recoining-api-core

./: .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
migrations/: 20221029_2342_initial_migration.cql
proto/: auth.proto  profile.proto  registries.proto  transactions.proto  users.proto
src/: main.rs
src/config/: config.rs  mod.rs
src/domain/: mod.rs  service_factory.rs  services_config.rs
src/domain/codes/: code_attempt_model.rs  code_send_model.rs  code_service.rs  codes_config.rs  mod.rs
src/domain/registries/: mod.rs  registry_model.rs  registry_service.rs  registry_variant_model.rs
src/domain/registry_users/: mod.rs  registry_user_model.rs  registry_user_service.rs
src/domain/tokens/: access_token_model.rs  mod.rs  token_model.rs  token_service.rs  tokens_config.rs  tokens_payload_model.rs  tokens_state.rs
src/domain/transactions/: mod.rs  transaction_model.rs  transaction_service.rs  transaction_state_model.rs  transaction_variant_model.rs
src/domain/users/: mod.rs  user_model.rs  user_service.rs
src/grpc/: auth_grpc_service.rs  auth_service.rs  mod.rs  registries_grpc_service.rs  server.rs  server_config.rs  users_grpc_service.rs
src/grpc/extensions/: mod.rs
src/grpc/services/: auth_grpc_service.rs  mod.rs  profile_grpc_service.rs  registries_grpc_service.rs  transactions_grpc_service.rs  users_grpc_service.rs
src/logging/: grpc_logger.rs  logger.rs  mod.rs
src/migrations/: migrator.rs  mod.rs
src/storage/: mod.rs  repository_factory.rs  scylla_config.rs  scylla_context.rs
src/storage/id_generator/: id_generator.rs  (+1 more)
(+33 files in other folders)
