[package]
name = "recoining-api-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.8"
prost = "0.11"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
async-stream = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
bigdecimal = "0.2.0"
uuid = { version = "1.2.1", features = ["v4"] }
jsonwebtoken = "8.1.1"

scylla = "0.6.1"

[build-dependencies]
tonic-build = "0.8"